src/test/ui/moves/move-into-dead-array-1.stderr
error[E0381]: binding `a` isn't initialized
  --> $DIR/move-into-dead-array-1.rs:14:5
   |
LL |     let mut a: [D; 4];
   |         ----- variable declared here
LL |     a[i] = d();
   |     ^^^^ `a` used here but it isn't initialized

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
